--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -37,6 +37,7 @@
     "date-fns": "^2.25.0",
     "debounce-promise": "^3.1.2",
     "deep-copy": "^1.4.2",
+    "deepdash": "^5.3.7",
     "deepmerge": "^4.2.2",
     "fast-equals": "^2.0.3",
     "fast-json-patch": "^3.1.0",
