--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -60,6 +60,7 @@
     "query-string": "^7.0.1",
     "react": "^16.14.0",
     "react-chart-editor": "^0.45.0",
+    "react-csv": "^2.0.3",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.14.0",
