--- a/apps/action-server/package.json
+++ b/apps/action-server/package.json
@@ -10,14 +10,12 @@
   "author": "Balena.io. <hello@balena.io>",
   "license": "UNLICENSED",
   "dependencies": {
-    "@balena/jellyfish-action-library": "^14.1.2",
     "@balena/jellyfish-core": "^5.0.2",
     "@balena/jellyfish-environment": "^4.3.5",
     "@balena/jellyfish-logger": "^3.0.36",
     "@balena/jellyfish-metrics": "^1.0.298",
     "@balena/jellyfish-plugin-base": "^2.1.180",
     "@balena/jellyfish-plugin-channels": "^1.1.219",
-    "@balena/jellyfish-plugin-default": "^16.0.2",
     "@balena/jellyfish-plugin-discourse": "^1.0.31",
     "@balena/jellyfish-plugin-flowdock": "^1.0.56",
     "@balena/jellyfish-plugin-github": "^1.1.3",
@@ -27,6 +25,9 @@
     "@balena/jellyfish-queue": "^1.0.198",
     "@balena/jellyfish-sync": "^6.0.270",
     "@balena/jellyfish-worker": "^7.0.16",
+    "@balena/jellyfish-action-library": "15.0.0-remove-front-656f3c14007613370a8e09bed366aabee989b66d",
+    "@balena/jellyfish-plugin-default": "17.0.0-remove-front-f7e7de5d87273c16a2a37cec468f41d4a48c4c5c",
+    "@balena/jellyfish-plugin-front": "1.0.0-add-code-93d6164048b7fb4123a557ba0e9bdcad1b8aa1cf",
     "bluebird": "^3.7.2",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
