--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@balena/ci-task-runner": "^0.3.3",
-    "@balena/jellyfish-action-library": "^14.1.2",
+    "@balena/jellyfish-action-library": "15.0.0-remove-front-656f3c14007613370a8e09bed366aabee989b66d",
     "@balena/jellyfish-chat-widget": "^10.0.7",
     "@balena/jellyfish-client-sdk": "^5.2.3",
     "@balena/jellyfish-config": "^1.4.2",
@@ -65,7 +65,6 @@
     "@balena/jellyfish-environment": "^4.3.5",
     "@balena/jellyfish-plugin-base": "^2.1.180",
     "@balena/jellyfish-plugin-channels": "^1.1.219",
-    "@balena/jellyfish-plugin-default": "^16.0.2",
     "@balena/jellyfish-plugin-discourse": "^1.0.31",
     "@balena/jellyfish-plugin-flowdock": "^1.0.56",
     "@balena/jellyfish-plugin-github": "^1.1.3",
@@ -74,6 +73,8 @@
     "@balena/jellyfish-plugin-typeform": "^3.0.137",
     "@balena/jellyfish-queue": "^1.0.198",
     "@balena/jellyfish-sync": "^6.0.270",
+    "@balena/jellyfish-plugin-default": "17.0.0-remove-front-f7e7de5d87273c16a2a37cec468f41d4a48c4c5c",
+    "@balena/jellyfish-plugin-front": "1.0.0-add-code-93d6164048b7fb4123a557ba0e9bdcad1b8aa1cf",
     "@balena/jellyfish-ui-components": "^9.3.4",
     "@balena/jellyfish-worker": "^7.0.16",
     "@octokit/plugin-retry": "^3.0.9",
