--- a/test/containers/Dockerfile.test
+++ b/test/containers/Dockerfile.test
@@ -8,6 +8,8 @@ COPY . ./
 RUN echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc && \
 	PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true npm ci --unsafe-perm && \
 	cd /usr/src/jellyfish/apps/server && npm ci && \
+	cd /usr/src/jellyfish/apps/action-server && npm ci && \
+	cd /usr/src/jellyfish/apps/livechat && npm ci && \
 	cd /usr/src/jellyfish/apps/ui && npm ci && \
 	rm -f ~/.npmrc
 
