Add TypeScript infrastructure to server app
Change-type: major
Signed-off-by: Graham McCulloch <graham@balena.io>

--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -7,6 +7,7 @@ RUN echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
 COPY ./apps/server/package.json /usr/src/jellyfish/apps/server/package.json
 COPY ./apps/server/package-lock.json /usr/src/jellyfish/apps/server/package-lock.json
 RUN npm ci
+RUN npm run build
 
 COPY ./package.json /usr/src/jellyfish/package.json
 COPY ./apps/server/Makefile /usr/src/jellyfish/apps/server/Makefile
@@ -16,10 +17,10 @@ COPY ./apps/server/Makefile /usr/src/jellyfish/apps/server/Makefile
 #dev-copy=./apps/server/packages/ /usr/src/jellyfish/packages/
 #dev-run=/usr/src/jellyfish/scripts/install-packages.js
 
-#dev-cmd-live=cd /usr/src/jellyfish/apps/server && npx nodemon --inspect=0.0.0.0 ./lib/index.js
+#dev-cmd-live=cd /usr/src/jellyfish/apps/server && npx nodemon --inspect=0.0.0.0 ./build/index.js
 #dev-copy=./.libs/ /usr/src/jellyfish/apps/server/node_modules/@balena/
 RUN rm -f ~/.npmrc
-COPY ./apps/server/lib/ /usr/src/jellyfish/apps/server/lib/
+COPY ./apps/server/build/ /usr/src/jellyfish/apps/server/build/
 
 # Production debugging scripts
 COPY ./scripts/production /usr/src/jellyfish/scripts/production
