--- a/apps/server/Makefile
+++ b/apps/server/Makefile
@@ -1,7 +1,5 @@
 MAKEFILE_PATH := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
 
-FIX ?=
-
 NODE_ARGS = --abort-on-uncaught-exception --stack-trace-limit=100
 NODE_DEBUG_ARGS = $(NODE_ARGS) \
 									--trace-warnings \
@@ -23,39 +21,23 @@ NODE = "node"
 endif
 endif
 
-CI ?=
-export CI
-AVA_ARGS = $(AVA_OPTS)
-ifndef CI
-AVA_ARGS += --fail-fast
-endif
-
-ifeq ($(FIX),)
-ESLINT_OPTION_FIX =
-else
-ESLINT_OPTION_FIX = --fix
-endif
-
-FILES ?= "'./test/**/*.spec.js'"
-
 .PHONY: lint
 lint:
-	npx eslint --ext .js $(ESLINT_OPTION_FIX) lib test
-	npx depcheck --ignore-bin-package --ignores='depcheck,nodemon'
+	npm run lint
 
 .PHONY: test
 test:
-	node $(NODE_DEBUG_ARGS) ./node_modules/.bin/ava $(AVA_ARGS) $(FILES)
+	npm run test
 
 .PHONY: test-unit
 test-unit:
-	make test FILES="'./test/unit/**/*.spec.js'"
+	npm run unit
 
 .PHONY: test-integration
 test-integration:
-	make test FILES="'./test/integration/**/*.spec.js'"
+	npm run integration
 
 .PHONY: start-server
 start-server: LOGLEVEL = info
 start-server:
-	NSOLID_APP=server exec $(NODE) $(NODE_ARGS) lib/index.js
+	NSOLID_APP=server exec $(NODE) $(NODE_ARGS) build/index.js
