--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,17 +7,19 @@
   "engines": {
     "node": ">=14.2.0"
   },
-  "ava": {
-    "timeout": "10m",
-    "verbose": true,
-    "serial": true,
-    "failWithoutAssertions": true,
-    "files": [
-      "test/**/*.spec.{js,jsx}"
-    ]
-  },
   "author": "Balena.io. <hello@balena.io>",
   "license": "UNLICENSED",
+  "scripts": {
+    "clean": "rimraf build",
+    "build": "npm run clean && tsc -p tsconfig.build.json",
+    "lint": "balena-lint lib test && depcheck --ignore-bin-package --ignores=depcheck,@types/jest,nodemon",
+    "lint-fix": "balena-lint --fix lib test",
+    "unit": "jest ./test/unit/**/*.spec.ts",
+    "integration": "jest ./test/integration/**/*.spec.ts",
+    "test": "catch-uncommitted --skip-node-versionbot-changes && npm run lint && npm run unit",
+    "doc": "typedoc lib/",
+    "prepack": "npm run build"
+  },
   "dependencies": {
     "@balena/jellyfish-action-library": "^14.1.1",
     "@balena/jellyfish-assert": "^1.1.55",
@@ -57,11 +59,19 @@
   },
   "devDependencies": {
     "@balena/jellyfish-client-sdk": "^5.2.3",
-    "ava": "^3.15.0",
+    "@balena/jellyfish-config": "^1.4.0",
+    "@balena/jellyfish-types": "^0.8.1",
+    "@balena/lint": "^6.1.1",
+    "@types/jest": "^26.0.23",
+    "catch-uncommitted": "^2.0.0",
     "depcheck": "^1.4.2",
-    "eslint": "^7.29.0",
+    "jest": "^27.0.6",
     "nock": "^13.1.0",
     "nodemon": "^2.0.7",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^27.0.3",
+    "typedoc": "^0.21.2",
+    "typescript": "^4.3.5"
   }
 }
