--- a/apps/action-server/package.json
+++ b/apps/action-server/package.json
@@ -48,12 +48,14 @@
     "@balena/jellyfish-types": "^0.8.0",
     "@balena/lint": "^6.1.1",
     "@types/jest": "^26.0.23",
+    "@types/uuid": "^8.3.1",
     "catch-uncommitted": "^2.0.0",
     "depcheck": "^1.4.2",
     "jest": "^27.0.6",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0",
     "typedoc": "^0.21.2",
     "typescript": "^4.3.5"
   }
