--- a/package.json
+++ b/package.json
@@ -62,9 +62,10 @@
     "@balena/jellyfish-config": "^1.4.3",
     "@balena/jellyfish-core": "^5.1.0",
     "@balena/jellyfish-environment": "^4.3.10",
+    "@balena/jellyfish-plugin-balena-api": "1.0.0-add-code-ab1f00e89d18dc9eb1b35f3f1815265b829200eb",
     "@balena/jellyfish-plugin-base": "^2.1.185",
     "@balena/jellyfish-plugin-channels": "^1.1.226",
-    "@balena/jellyfish-plugin-default": "^17.1.0",
+    "@balena/jellyfish-plugin-default": "18.0.0-remove-balena-api-26321cecb296381b57e60ef31568d43438fa3051",
     "@balena/jellyfish-plugin-discourse": "^1.0.40",
     "@balena/jellyfish-plugin-flowdock": "^1.0.64",
     "@balena/jellyfish-plugin-front": "^1.0.5",
