--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
       "eslint --cache --fix",
       "deplint"
     ],
+    "*.{ts,tsx}": [
+      "balena-lint --fix"
+    ],
     "*.sh": [
       "shellcheck"
     ],
@@ -77,6 +80,7 @@
     "@balena/jellyfish-sync": "^6.0.282",
     "@balena/jellyfish-ui-components": "^10.0.0",
     "@balena/jellyfish-worker": "^7.0.27",
+    "@balena/lint": "^6.1.1",
     "@octokit/plugin-retry": "^3.0.9",
     "@octokit/plugin-throttling": "^3.5.1",
     "@octokit/rest": "^18.6.7",
