--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -50,6 +50,8 @@ services:
       - INTEGRATION_BALENA_API_PRIVATE_KEY
       - INTEGRATION_BALENA_API_PUBLIC_KEY_PRODUCTION
       - INTEGRATION_BALENA_API_PUBLIC_KEY_STAGING=foobar
+      - INTEGRATION_BALENA_API_APP_ID
+      - INTEGRATION_BALENA_API_APP_SECRET
       - INTEGRATION_DEFAULT_USER
       - INTEGRATION_DISCOURSE_SIGNATURE_KEY
       - INTEGRATION_DISCOURSE_TOKEN
