--- a/apps/livechat/package.json
+++ b/apps/livechat/package.json
@@ -10,9 +10,10 @@
   "author": "Balena.io. <hello@balena.io>",
   "license": "UNLICENSED",
   "dependencies": {
-    "@balena/jellyfish-chat-widget": "^11.0.11",
+    "@balena/jellyfish-chat-widget": "^12.0.6",
     "@balena/jellyfish-client-sdk": "^5.3.4",
     "@balena/jellyfish-ui-components": "^10.0.12",
+    "@use-it/event-listener": "^0.1.6",
     "css-loader": "^5.2.6",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
