use balena convention for npm script names
i.e. base-cmd:sub-cmd

Change-type: patch
Signed-off-by: Martin Rauscher <martin@balena.io>

--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -11,9 +11,9 @@
     "clean": "rimraf build",
     "build": "npm run clean && tsc",
     "lint": "balena-lint lib test && depcheck --ignore-bin-package --ignores=@babel/*,canvas,history,depcheck,css-loader,file-loader,babel-loader,style-loader,webpack-cli,webpack-dev-server,@types/jest,assert",
-    "lint-fix": "balena-lint --fix lib test",
-    "unit": "jest",
-    "test": "catch-uncommitted --skip-node-versionbot-changes && npm run lint && npm run unit",
+    "lint:fix": "balena-lint --fix lib test",
+    "test": "catch-uncommitted --skip-node-versionbot-changes && npm run lint && npm run test:unit",
+    "test:unit": "jest",
     "doc": "typedoc lib/",
     "prepack": "npm run build"
   },
