--- a/apps/action-server/package.json
+++ b/apps/action-server/package.json
@@ -13,9 +13,9 @@
     "clean": "rimraf build",
     "build": "npm run clean && tsc -p tsconfig.build.json",
     "lint": "balena-lint lib test && depcheck --ignore-bin-package --ignores=depcheck,@types/jest,nodemon",
-    "lint-fix": "balena-lint --fix lib test",
-    "unit": "jest",
-    "test": "catch-uncommitted --skip-node-versionbot-changes && npm run lint && npm run unit",
+    "lint:fix": "balena-lint --fix lib test",
+    "test": "catch-uncommitted --skip-node-versionbot-changes && npm run lint && npm run test:unit",
+    "test:unit": "jest",
     "doc": "typedoc lib/",
     "prepack": "npm run build"
   },
