--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@balena/jellyfish-plugin-discourse": "^1.1.3",
     "@balena/jellyfish-plugin-flowdock": "^1.0.97",
     "@balena/jellyfish-plugin-front": "^1.2.10",
-    "@balena/jellyfish-plugin-github": "^1.10.13",
+    "@balena/jellyfish-plugin-github": "1.11.0-h32-fix-pr-overwrite-cr-5bbef0ca646cba03a4b5007848524cf2601c4f93",
     "@balena/jellyfish-plugin-outreach": "^1.0.112",
     "@balena/jellyfish-plugin-product-os": "^2.5.12",
     "@balena/jellyfish-plugin-typeform": "^3.0.204",
