--- a/docker-compose.tpl.yml
+++ b/docker-compose.tpl.yml
@@ -119,6 +119,10 @@ services:
     environment:
       - NGINX_PORT=80
       - LIVECHAT_PORT=80
+    labels:
+      - "traefik.http.routers.livechat.rule=HostRegexp(`livechat.ly.fish.local`)"
+      - "traefik.http.services.livechat-service.loadbalancer.server.port=80"
+      - "traefik.enable=true"
   postgres:
     image: balena/open-balena-db:4.1.0
     restart: always
