--- a/apps/livechat/package.json
+++ b/apps/livechat/package.json
@@ -7,6 +7,10 @@
   "engines": {
     "node": ">=14.2.0"
   },
+  "scripts": {
+    "lint": "balena-lint lib && depcheck --ignore-bin-package --ignores=@babel/*,@balena/jellyfish-config,canvas,history,depcheck,css-loader,file-loader,babel-loader,style-loader,webpack-cli,webpack-dev-server,@types/jest,assert",
+    "lint-fix": "balena-lint --fix lib"
+  },
   "author": "Balena.io. <hello@balena.io>",
   "license": "UNLICENSED",
   "dependencies": {
@@ -29,9 +33,14 @@
     "@babel/core": "^7.14.8",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-react": "^7.14.5",
+    "@balena/jellyfish-config": "^1.4.8",
+    "@balena/lint": "^6.1.1",
     "babel-loader": "^8.2.2",
     "depcheck": "^1.4.2",
     "eslint": "^7.32.0",
+    "rimraf": "^3.0.2",
+    "ts-loader": "^8.3.0",
+    "typescript": "^4.3.5",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   }
