--- a/docker-compose.tpl.yml
+++ b/docker-compose.tpl.yml
@@ -281,6 +281,8 @@ services:
   reverse-proxy:
     image: traefik:v2.4
     command: --api.insecure=true --providers.docker --providers.docker.endpoint="unix:///var/run/balena.sock" --providers.docker.exposedByDefault=false
+    volumes:
+      - "/var/run/docker.sock:/var/run/balena.sock:ro"
     ports:
       - "80:80/tcp"
       - '5432:5432/tcp'
