--- a/apps/livechat/package.json
+++ b/apps/livechat/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && webpack --config=./webpack.config.js",
-    "lint": "balena-lint lib && depcheck --ignore-bin-package --ignores=@babel/*,@balena/jellyfish-config,canvas,history,depcheck,css-loader,file-loader,babel-loader,style-loader,webpack-cli,webpack-dev-server,@types/jest,assert",
-    "lint-fix": "balena-lint --fix lib",
+    "lint": "balena-lint lib && depcheck --ignore-bin-package --ignores=@balena/jellyfish-config,canvas,history,depcheck,css-loader,file-loader,babel-loader,style-loader,webpack-cli,webpack-dev-server,@types/jest,assert",
+    "lint:fix": "balena-lint --fix lib",
     "doc": "typedoc lib/",
     "prepack": "npm run build"
   },
@@ -34,9 +34,6 @@
     "webpack-bundle-analyzer": "^4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-react": "^7.14.5",
     "@balena/jellyfish-config": "^1.4.8",
     "@balena/lint": "^6.1.1",
     "babel-loader": "^8.2.2",
