--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -107,6 +107,7 @@
     "eslint": "^7.32.0",
     "grommet": "^2.17.4",
     "jest": "^26.6.3",
+    "jest-esm-transformer": "^1.0.0",
     "json-schema": "^0.3.0",
     "redux-mock-store": "^1.5.4",
     "rimraf": "^3.0.2",
