--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -40,7 +40,7 @@
     "deep-copy": "^1.4.2",
     "deepmerge": "^4.2.2",
     "fast-equals": "^2.0.3",
-    "fast-json-patch": "^3.0.0-1",
+    "fast-json-patch": "^3.1.0",
     "file-loader": "^6.2.0",
     "file-saver": "^2.0.5",
     "flat": "^5.0.2",
@@ -72,10 +72,10 @@
     "react-swipeable": "^6.1.2",
     "react-trello": "^2.2.11",
     "react-virtualized": "^9.22.3",
-    "redux": "^4.1.0",
+    "redux": "^4.1.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "rendition": "^21.5.3",
+    "rendition": "^21.5.6",
     "skhema": "^5.3.4",
     "style-loader": "^2.0.0",
     "styled-components": "^5.3.0",
