Remove tick server
Remove the tick server from our backend as we currently do not use it and the intended functionality of tick will be handled by scheduled actions: https://jel.ly.fish/88e737da-8692-49c8-bf5a-43d27c6b7a39.

Change-type: major
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.resinci.yml
+++ b/.resinci.yml
@@ -6,11 +6,7 @@ docker:
       docker_repo: balena/jellyfish
       publish: true
     - path: .
-      dockerfile: apps/action-server/Dockerfile.tick
-      docker_repo: balena/jellyfish-tick-server
-      publish: true
-    - path: .
-      dockerfile: apps/action-server/Dockerfile.worker
+      dockerfile: apps/action-server/Dockerfile
       docker_repo: balena/jellyfish-action-server
       publish: true
     - path: .
