--- a/docker-compose.tpl.yml
+++ b/docker-compose.tpl.yml
@@ -206,7 +206,7 @@ services:
       - 923{{idx}}:9229
   {{/workers}}
   balena-mdns-publisher:
-    image: 'balena/balena-mdns-publisher:master'
+    image: 'balena/balena-mdns-publisher:v1.10.1'
     network_mode: host
     cap_add:
       - SYS_RESOURCE
@@ -226,15 +226,7 @@ services:
       DBUS_SESSION_BUS_ADDRESS: 'unix:path=/host/run/dbus/system_bus_socket'
       CONFD_BACKEND: 'ENV'
   haproxy:
-    image: 'balena/open-balena-haproxy:2.11.3'
-    cap_add:
-      - SYS_RESOURCE
-      - SYS_ADMIN
-    security_opt:
-      - 'apparmor=unconfined'
-    tmpfs:
-      - /run
-      - /sys/fs/cgroup
+    image: 'balena/open-balena-haproxy:v4.0.1'
     depends_on:
       {{#workers}}
       - worker_{{idx}}
