--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -267,7 +267,7 @@ services:
     ports:
       - 9232:9229
   balena-mdns-publisher:
-    image: 'balena/balena-mdns-publisher:master'
+    image: 'balena/balena-mdns-publisher:v1.10.1'
     network_mode: host
     cap_add:
       - SYS_RESOURCE
@@ -287,15 +287,7 @@ services:
       DBUS_SESSION_BUS_ADDRESS: 'unix:path=/host/run/dbus/system_bus_socket'
       CONFD_BACKEND: 'ENV'
   haproxy:
-    image: 'balena/open-balena-haproxy:2.11.3'
-    cap_add:
-      - SYS_RESOURCE
-      - SYS_ADMIN
-    security_opt:
-      - 'apparmor=unconfined'
-    tmpfs:
-      - /run
-      - /sys/fs/cgroup
+    image: 'balena/open-balena-haproxy:v4.0.1'
     depends_on:
       - worker_1
       - worker_2
