Add Renovate group for puppeteer
The latest version of puppeteer is currently breaking some of our E2E
tests. Delegating puppeteer to its own Renovate group until this issue
is resolved.

Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,10 @@
 {
   "extends": [
     "github>product-os/jellyfish-config//config/renovate"
+  ],
+  "packageRules": [
+    {
+      "matchPackagePatterns": ["puppeteer"]
+    }
   ]
 }
