Add groupName to puppeteer Renovate group
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,7 +4,8 @@
   ],
   "packageRules": [
     {
-      "matchPackagePatterns": ["puppeteer"]
+      "matchPackagePatterns": ["puppeteer"],
+      "groupName": "puppeteer"
     }
   ]
 }
