--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -74,6 +74,7 @@
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
     "typedoc": "^0.21.9",
     "typescript": "^4.4.2"
   }
