--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -45,6 +45,7 @@
     "aws-sdk": "^2.987.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "errio": "^1.2.2",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
@@ -64,6 +65,7 @@
     "@balena/jellyfish-config": "^1.5.4",
     "@balena/jellyfish-types": "^1.2.3",
     "@balena/lint": "^6.1.1",
+    "@types/cookie-parser": "^1.4.2",
     "@types/jest": "^27.0.1",
     "@types/node": "^14.17.15",
     "catch-uncommitted": "^2.0.0",
