Re-use images generated in build step in docker-compose phase
Change-type: patch
Signed-off-by: Lucian Buzzo <lucian.buzzo@gmail.com>

--- a/docker-compose.tpl.yml
+++ b/docker-compose.tpl.yml
@@ -2,6 +2,7 @@ version: '2.1'
 
 services:
   api:
+    image: balena/jellyfish
     build:
       context: .
       dockerfile: ./apps/server/Dockerfile
@@ -122,6 +123,7 @@ services:
     networks:
       - internal
   ui:
+    image: balena/jellyfish-ui
     build:
       args:
         - NPM_TOKEN
@@ -141,6 +143,7 @@ services:
       - internal
   {{#workers}}
   worker_{{idx}}:
+    image: balena/jellyfish-action-server
     build:
       context: .
       dockerfile: ./apps/action-server/Dockerfile
