--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -40,7 +40,7 @@
     "@balena/jellyfish-plugin-typeform": "^3.0.305",
     "@balena/jellyfish-queue": "^1.0.277",
     "@balena/jellyfish-sync": "^6.1.25",
-    "@balena/jellyfish-worker": "^10.0.38",
+    "@balena/jellyfish-worker": "^10.1.0-debug-notif-5b0145d76f7eed8a04ca39a9ee5df9094bed3658",
     "@balena/socket-prometheus-metrics": "^0.0.3",
     "aws-sdk": "^2.987.0",
     "bluebird": "^3.7.2",
