--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "@balena/jellyfish-queue": "^1.0.277",
     "@balena/jellyfish-sync": "^6.1.25",
     "@balena/jellyfish-ui-components": "^11.0.4",
-    "@balena/jellyfish-worker": "^10.0.38",
+    "@balena/jellyfish-worker": "^10.1.0-debug-notif-5b0145d76f7eed8a04ca39a9ee5df9094bed3658",
     "@balena/lint": "^6.1.1",
     "@octokit/plugin-retry": "^3.0.9",
     "@octokit/plugin-throttling": "^3.5.2",
