--- a/apps/action-server/package.json
+++ b/apps/action-server/package.json
@@ -38,7 +38,7 @@
     "@balena/jellyfish-plugin-typeform": "^3.0.305",
     "@balena/jellyfish-queue": "^1.0.279",
     "@balena/jellyfish-sync": "^6.1.26",
-    "@balena/jellyfish-worker": "^10.0.38",
+    "@balena/jellyfish-worker": "10.0.39-lucianbuzzo-notification-debug-300918186a50263753bebf77aae6f62a6c57a55f",
     "bluebird": "^3.7.2",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
