--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -40,7 +40,7 @@
     "@balena/jellyfish-plugin-typeform": "^3.0.305",
     "@balena/jellyfish-queue": "^1.0.279",
     "@balena/jellyfish-sync": "^6.1.26",
-    "@balena/jellyfish-worker": "^10.0.38",
+    "@balena/jellyfish-worker": "10.0.39-lucianbuzzo-notification-debug-300918186a50263753bebf77aae6f62a6c57a55f",
     "@balena/socket-prometheus-metrics": "^0.0.3",
     "aws-sdk": "^2.987.0",
     "bluebird": "^3.7.2",
