--- a/apps/livechat/package.json
+++ b/apps/livechat/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@balena/jellyfish-chat-widget": "^12.2.0",
     "@balena/jellyfish-client-sdk": "^6.0.0",
-    "@balena/jellyfish-ui-components": "^12.0.0",
+    "@balena/jellyfish-ui-components": "^12.0.2-timeline-fix-2de67b3553936cb1bb22d4d987be6342e3bf9fad",
     "@use-it/event-listener": "^0.1.6",
     "css-loader": "^5.2.7",
     "file-loader": "^6.2.0",
