--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "@balena/jellyfish-plugin-typeform": "^3.0.305",
     "@balena/jellyfish-queue": "^1.0.277",
     "@balena/jellyfish-sync": "^6.1.25",
-    "@balena/jellyfish-ui-components": "^12.0.0",
+    "@balena/jellyfish-ui-components": "^12.0.2-timeline-fix-2de67b3553936cb1bb22d4d987be6342e3bf9fad",
     "@balena/jellyfish-worker": "^10.0.38",
     "@balena/lint": "^6.1.1",
     "@octokit/plugin-retry": "^3.0.9",
