--- a/apps/livechat/package.json
+++ b/apps/livechat/package.json
@@ -38,9 +38,9 @@
     "@balena/lint": "^6.1.1",
     "babel-loader": "^8.2.2",
     "depcheck": "^1.4.2",
+    "esbuild-loader": "^2.15.1",
     "eslint": "^7.32.0",
     "rimraf": "^3.0.2",
-    "ts-loader": "^8.3.0",
     "typedoc": "^0.21.9",
     "typescript": "^4.4.2",
     "webpack-cli": "^4.8.0",
