--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -101,6 +101,7 @@
     "depcheck": "^1.4.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "esbuild-loader": "^2.15.1",
     "eslint": "^7.32.0",
     "grommet": "^2.17.5",
     "jest": "^26.6.3",
@@ -110,7 +111,6 @@
     "rimraf": "^3.0.2",
     "sinon": "^11.1.2",
     "ts-jest": "^26.5.6",
-    "ts-loader": "^8.3.0",
     "typedoc": "^0.21.9",
     "typescript": "^4.4.2",
     "webpack-cli": "^4.8.0",
